[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextcloud-wrapper"
version = "0.3.0"
description = "Wrapper Python per gestire Nextcloud con WebDAV diretto, quote e gestione utenti"
authors = [{name="Your Name", email="you@example.com"}]
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.28.0",
    "rich>=13.0.0"
]
requires-python = ">=3.8"

[project.scripts]
nextcloud-wrapper = "ncwrap.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ncwrap*"]

[tool.setuptools.package-data]
ncwrap = ["*.conf", "*.txt"]
